    linking against Oracle Berkeley DB 5.3 or newer.

  * WARNING - BREAKING CHANGE: The record number in the tuple returned by
    "DB.consume()" is now a number instead of a binary key.

  * WARNING - BREAKING CHANGE: The record number in the tuple returned by
    "DB.consume_wait()" is now a number instead of a binary key.

  * "DB.get()" and "DB.pget()" could misunderstand flags.

18.1.2 - 2020-12-07:
  * Releases 18.1.0 and 18.1.1 were incomplete. Thanks to Mihai.i
    for reporting.

  * Export exception "DBMetaChksumFail" (from error "DB_META_CHKSUM_FAIL") if
    running Oracle Berkeley DB version 6.2 or newer.

  * Support Heap access method if you are linking against Oracle Berkeley DB
    5.3 or newer.

    - "DB.put()" can add new records or overwrite old ones in Heap access
      method.

    - "DB.append()" was extended to support Heap access method.

    - "DB.cursor()" was extended to support Heap access method.

    - Implement, test and document "DB.get_heapsize()", "DB.set_heapsize()",
      "DB.get_heap_regionsize()" and "DB.set_heap_regionsize()".

    - Export exception "DBHeapFull" (from error "DB_HEAP_FULL").

    - "DB.stats()" provides stats for Heap access method.

  * WARNING - BREAKING CHANGE: Add "dbtype" member in "DBObject" object in the
    C API. Increase C API version. This change has ripple effect in the code.

  * WARNING - BREAKING CHANGE: "primaryDBType" member in "DBObject" object in
    the C API is now type "DBTYPE". Increase C API version. This change has
    ripple effect in the code.

  * Now "DB.get_type()" can be called anytime and it doesn't raise an exception
    if called before the database is open. If the database type is not known,
    "DB_UNKNOWN" is returned. This is a deviation from the Oracle Berkeley DB C
    API.

  * WARNING - BREAKING CHANGE: "DB.type()" method is dropped. It was never
    documented. Use "DB.get_type()".

  * "DB.stats()" returns new keys in the dictionary:
